--- a/clean_code/polybench_seq/Makefile.discopop
+++ b/clean_code/polybench_seq/Makefile.discopop
@@ -1,89 +1,104 @@
 compile_atax:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/atax utilities/polybench.c linear-algebra/kernels/atax/atax.c -o atax_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/atax utilities/polybench.c linear-algebra/kernels/atax/atax.c -o atax_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_atax:
 	discopop_cc -I utilities -I linear-algebra/kernels/atax utilities/polybench.c linear-algebra/kernels/atax/atax.c -o atax_base -DSMALL_DATASET
 
 compile_3mm:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/3mm utilities/polybench.c linear-algebra/kernels/3mm/3mm.c -o 3mm_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/3mm utilities/polybench.c linear-algebra/kernels/3mm/3mm.c -o 3mm_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_3mm:
 	discopop_cc -I utilities -I linear-algebra/kernels/3mm utilities/polybench.c linear-algebra/kernels/3mm/3mm.c -o 3mm_base -DSMALL_DATASET
 
 compile_2mm:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/2mm utilities/polybench.c linear-algebra/kernels/2mm/2mm.c -o 2mm_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/2mm utilities/polybench.c linear-algebra/kernels/2mm/2mm.c -o 2mm_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_2mm:
 	discopop_cc -I utilities -I linear-algebra/kernels/2mm utilities/polybench.c linear-algebra/kernels/2mm/2mm.c -o 2mm_base -DSMALL_DATASET
 
 compile_bicg:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/bicg utilities/polybench.c linear-algebra/kernels/bicg/bicg.c -o bicg_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/bicg utilities/polybench.c linear-algebra/kernels/bicg/bicg.c -o bicg_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_bicg:
 	discopop_cc -I utilities -I linear-algebra/kernels/bicg utilities/polybench.c linear-algebra/kernels/bicg/bicg.c -o bicg_base -DSMALL_DATASET
 
 compile_cholesky:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/cholesky utilities/polybench.c linear-algebra/kernels/cholesky/cholesky.c -o cholesky_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/cholesky utilities/polybench.c linear-algebra/kernels/cholesky/cholesky.c -o cholesky_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_cholesky:
 	discopop_cc -I utilities -I linear-algebra/kernels/cholesky utilities/polybench.c linear-algebra/kernels/cholesky/cholesky.c -o cholesky_base -DSMALL_DATASET
 
 compile_doitgen:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/doitgen utilities/polybench.c linear-algebra/kernels/doitgen/doitgen.c -o doitgen_base -DLARGE_DATASET
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/doitgen utilities/polybench.c linear-algebra/kernels/doitgen/doitgen.c -o doitgen_base_dump_arrays -DLARGE_DATASET -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_doitgen:
 	discopop_cc -I utilities -I linear-algebra/kernels/doitgen utilities/polybench.c linear-algebra/kernels/doitgen/doitgen.c -o doitgen_base -DSMALL_DATASET
 
 compile_gemm:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/gemm utilities/polybench.c linear-algebra/kernels/gemm/gemm.c -o gemm_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/gemm utilities/polybench.c linear-algebra/kernels/gemm/gemm.c -o gemm_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_gemm:
 	discopop_cc -I utilities -I linear-algebra/kernels/gemm utilities/polybench.c linear-algebra/kernels/gemm/gemm.c -o gemm_base -DSMALL_DATASET
 
 compile_gemver:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/gemver utilities/polybench.c linear-algebra/kernels/gemver/gemver.c -o gemver_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/gemver utilities/polybench.c linear-algebra/kernels/gemver/gemver.c -o gemver_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_gemver:
 	discopop_cc -I utilities -I linear-algebra/kernels/gemver utilities/polybench.c linear-algebra/kernels/gemver/gemver.c -o gemver_base -DSMALL_DATASET
 
 compile_gesummv:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/gesummv utilities/polybench.c linear-algebra/kernels/gesummv/gesummv.c -o gesummv_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/gesummv utilities/polybench.c linear-algebra/kernels/gesummv/gesummv.c -o gesummv_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_gesummv:
 	discopop_cc -I utilities -I linear-algebra/kernels/gesummv utilities/polybench.c linear-algebra/kernels/gesummv/gesummv.c -o gesummv_base -DSMALL_DATASET
 
 compile_mvt:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/mvt utilities/polybench.c linear-algebra/kernels/mvt/mvt.c -o mvt_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/mvt utilities/polybench.c linear-algebra/kernels/mvt/mvt.c -o mvt_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_mvt:
 	discopop_cc -I utilities -I linear-algebra/kernels/mvt utilities/polybench.c linear-algebra/kernels/mvt/mvt.c -o mvt_base -DSMALL_DATASET
 
 compile_symm:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/symm utilities/polybench.c linear-algebra/kernels/symm/symm.c -o symm_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/symm utilities/polybench.c linear-algebra/kernels/symm/symm.c -o symm_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_symm:
 	discopop_cc -I utilities -I linear-algebra/kernels/symm utilities/polybench.c linear-algebra/kernels/symm/symm.c -o symm_base -DSMALL_DATASET
 
 compile_syr2k:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/syr2k utilities/polybench.c linear-algebra/kernels/syr2k/syr2k.c -o syr2k_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/syr2k utilities/polybench.c linear-algebra/kernels/syr2k/syr2k.c -o syr2k_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_syr2k:
 	discopop_cc -I utilities -I linear-algebra/kernels/syr2k utilities/polybench.c linear-algebra/kernels/syr2k/syr2k.c -o syr2k_base -DSMALL_DATASET
 
 compile_syrk:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/syrk utilities/polybench.c linear-algebra/kernels/syrk/syrk.c -o syrk_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/syrk utilities/polybench.c linear-algebra/kernels/syrk/syrk.c -o syrk_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_syrk:
 	discopop_cc -I utilities -I linear-algebra/kernels/syrk utilities/polybench.c linear-algebra/kernels/syrk/syrk.c -o syrk_base -DSMALL_DATASET
 
 compile_trisolv:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/trisolv utilities/polybench.c linear-algebra/kernels/trisolv/trisolv.c -o trisolv_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/trisolv utilities/polybench.c linear-algebra/kernels/trisolv/trisolv.c -o trisolv_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_trisolv:
 	discopop_cc -I utilities -I linear-algebra/kernels/trisolv utilities/polybench.c linear-algebra/kernels/trisolv/trisolv.c -o trisolv_base -DSMALL_DATASET
 
 compile_trmm:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/trmm utilities/polybench.c linear-algebra/kernels/trmm/trmm.c -o trmm_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/kernels/trmm utilities/polybench.c linear-algebra/kernels/trmm/trmm.c -o trmm_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_trmm:
 	discopop_cc -I utilities -I linear-algebra/kernels/trmm utilities/polybench.c linear-algebra/kernels/trmm/trmm.c -o trmm_base -DSMALL_DATASET
@@ -91,66 +106,77 @@ instrument_trmm:
 
 compile_durbin:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/solvers/durbin utilities/polybench.c linear-algebra/solvers/durbin/durbin.c -o durbin_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/solvers/durbin utilities/polybench.c linear-algebra/solvers/durbin/durbin.c -o durbin_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_durbin:
 	discopop_cc -I utilities -I linear-algebra/solvers/durbin utilities/polybench.c linear-algebra/solvers/durbin/durbin.c -o durbin_base -DSMALL_DATASET
 
 compile_dynprog:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/solvers/dynprog utilities/polybench.c linear-algebra/solvers/dynprog/dynprog.c -o dynprog_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/solvers/dynprog utilities/polybench.c linear-algebra/solvers/dynprog/dynprog.c -o dynprog_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_dynprog:
 	discopop_cc -I utilities -I linear-algebra/solvers/dynprog utilities/polybench.c linear-algebra/solvers/dynprog/dynprog.c -o dynprog_base -DSMALL_DATASET
 
 compile_gramschmidt:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/solvers/gramschmidt utilities/polybench.c linear-algebra/solvers/gramschmidt/gramschmidt.c -o gramschmidt_base -lm
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/solvers/gramschmidt utilities/polybench.c linear-algebra/solvers/gramschmidt/gramschmidt.c -o gramschmidt_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS -lm
 
 instrument_gramschmidt:
 	discopop_cc -I utilities -I linear-algebra/solvers/gramschmidt utilities/polybench.c linear-algebra/solvers/gramschmidt/gramschmidt.c -o gramschmidt_base -DSMALL_DATASET -lm
 
 compile_lu:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/solvers/lu utilities/polybench.c linear-algebra/solvers/lu/lu.c -o lu_base -DEXTRALARGE_DATASET
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/solvers/lu utilities/polybench.c linear-algebra/solvers/lu/lu.c -o lu_base_dump_arrays -DEXTRALARGE_DATASET -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_lu:
 	discopop_cc -I utilities -I linear-algebra/solvers/lu utilities/polybench.c linear-algebra/solvers/lu/lu.c -o lu_base -DSMALL_DATASET
 
 compile_ludcmp:
 	${CC} ${CFLAGS} -I utilities -I linear-algebra/solvers/ludcmp utilities/polybench.c linear-algebra/solvers/ludcmp/ludcmp.c -o ludcmp_base
+	${CC} ${CFLAGS} -I utilities -I linear-algebra/solvers/ludcmp utilities/polybench.c linear-algebra/solvers/ludcmp/ludcmp.c -o ludcmp_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS
 
 instrument_ludcmp:
 	discopop_cc -I utilities -I linear-algebra/solvers/ludcmp utilities/polybench.c linear-algebra/solvers/ludcmp/ludcmp.c -o ludcmp_base -DSMALL_DATASET
 
 compile_correlation:
 	${CC} ${CFLAGS} -I utilities -I datamining/correlation utilities/polybench.c datamining/correlation/correlation.c -o correlation_base -lm
+	${CC} ${CFLAGS} -I utilities -I datamining/correlation utilities/polybench.c datamining/correlation/correlation.c -o correlation_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS -lm
 
 instrument_correlation:
 	discopop_cc -I utilities -I datamining/correlation utilities/polybench.c datamining/correlation/correlation.c -o correlation_base -DMINI_DATASET -lm
 
 compile_covariance:
 	${CC} ${CFLAGS} -I utilities -I datamining/covariance utilities/polybench.c datamining/covariance/covariance.c -o covariance_base -lm
+	${CC} ${CFLAGS} -I utilities -I datamining/covariance utilities/polybench.c datamining/covariance/covariance.c -o covariance_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS -lm
 
 instrument_covariance:
 	discopop_cc -I utilities -I datamining/covariance utilities/polybench.c datamining/covariance/covariance.c -o covariance_base -DMINI_DATASET -lm
 
 compile_jacobi-2d:
 	${CC} ${CFLAGS} -I utilities -I stencils/jacobi-2d-imper utilities/polybench.c stencils/jacobi-2d-imper/jacobi-2d-imper.c -o jacobi-2d_base -lm
+	${CC} ${CFLAGS} -I utilities -I stencils/jacobi-2d-imper utilities/polybench.c stencils/jacobi-2d-imper/jacobi-2d-imper.c -o jacobi-2d_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS -lm
 
 instrument_jacobi-2d:
 	discopop_cc -I utilities -I stencils/jacobi-2d-imper utilities/polybench.c stencils/jacobi-2d-imper/jacobi-2d-imper.c -o jacobi-2d_base -DMINI_DATASET -lm
 
 compile_jacobi-1d:
 	${CC} ${CFLAGS} -I utilities -I stencils/jacobi-1d-imper utilities/polybench.c stencils/jacobi-1d-imper/jacobi-1d-imper.c -o jacobi-1d_base -lm
+	${CC} ${CFLAGS} -I utilities -I stencils/jacobi-1d-imper utilities/polybench.c stencils/jacobi-1d-imper/jacobi-1d-imper.c -o jacobi-1d_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS -lm
 
 instrument_jacobi-1d:
 	discopop_cc -I utilities -I stencils/jacobi-1d-imper utilities/polybench.c stencils/jacobi-1d-imper/jacobi-1d-imper.c -o jacobi-1d_base -DMINI_DATASET -lm
 
 compile_fdtd-2d:
 	${CC} ${CFLAGS} -I utilities -I stencils/fdtd-2d utilities/polybench.c stencils/fdtd-2d/fdtd-2d.c -o fdtd-2d_base -lm
+	${CC} ${CFLAGS} -I utilities -I stencils/fdtd-2d utilities/polybench.c stencils/fdtd-2d/fdtd-2d.c -o fdtd-2d_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS -lm
 
 instrument_fdtd-2d:
 	discopop_cc -I utilities -I stencils/fdtd-2d utilities/polybench.c stencils/fdtd-2d/fdtd-2d.c -o fdtd-2d_base -DMINI_DATASET -lm
 
 compile_adi:
 	${CC} ${CFLAGS} -I utilities -I stencils/adi utilities/polybench.c stencils/adi/adi.c -o adi_base -lm
+	${CC} ${CFLAGS} -I utilities -I stencils/adi utilities/polybench.c stencils/adi/adi.c -o adi_base_dump_arrays -DPOLYBENCH_DUMP_ARRAYS -lm
 
 instrument_adi:
 	discopop_cc -I utilities -I stencils/adi utilities/polybench.c stencils/adi/adi.c -o adi_base -DMINI_DATASET -lm
